--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
 <h1>Hello World</h1>
+
+
+<div class="row mt-4">
+    <div class="col-3">
+        
+    </div>
+
+    <div class="col">
+        <!--<share-home-page></share-home-page>-->
+        <share-about-page></share-about-page>
+    </div>
+
+</div>
