Add new routes, and a new page called contact

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,13 @@
 
 <div class="row mt-4">
     <div class="col-3">
-        
+        <!--sidebar-->
+        <shared-sidebar></shared-sidebar>
     </div>
 
     <div class="col">
-        <!--<share-home-page></share-home-page>-->
-        <share-about-page></share-about-page>
+        <!--Mi paginas-->
+        <router-outlet></router-outlet>
     </div>
 
 </div>
