--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -13,4 +13,16 @@
         contact Page
     </li>
 
+    <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item">
+        Por capital 
+    </li>
+
+    <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item">
+        Por Pais
+    </li>
+
+    <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">
+        Por Region 
+    </li>
+
 </ul>
