--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,14 +4,16 @@
 <div class="row">
     <div class="col">
              <!--SearchBox-->
-             <shared-search-box (onValue)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>
+             <shared-search-box (OnValue)="searchByCapital($event)" 
+             placeholder="Buscar por Capital">
+            </shared-search-box>
     </div>
 </div>
 
 
 <div class="row">
     <div class="col">
-           <!--Table-->
-           Tabla de resultados.
-    </div>
+        <hr>
+        <countries-country-table [countries]="countries"></countries-country-table>
+  </div>
 </div>
