--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,1 +1,1 @@
-<input type="text" [placeholder]="placeholder" class="form-control" #txtInput>
+<input type="text" [placeholder]="placeholder" class="form-control"  (keyup.enter)="emitValue(txtInput.value)" #txtInput>
