Add functionality by Country,Region 18/09/2023

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,28 +3,15 @@
 
 <ul class="list-group">
 
-    <!--
-    <li  routerLink="" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}" class="list-group-item">
-        Home Page
-    </li>
-    <li routerLink="about" routerLinkActive="active" class="list-group-item">
-        About Page
-    </li>
-
-    <li routerLink="contact" routerLinkActive="active" class="list-group-item">
-        contact Page
-    </li>
--->
-
-    <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item">
+    <li routerLink="countries/by-Capital" routerLinkActive="active" class="list-group-item">
         Por capital 
     </li>
 
-    <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item">
+    <li routerLink="countries/by-Country" routerLinkActive="active" class="list-group-item">
         Por Pais
     </li>
 
-    <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">
+    <li routerLink="countries/by-Region" routerLinkActive="active" class="list-group-item">
         Por Region 
     </li>
 
