--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,55 @@
-<p>country-page works!</p>
+
+<ng-template #loading>
+    <div class="alert alert-info">
+        Espere por favor
+    </div>
+</ng-template>
+
+
+<div *ngIf="country; else loading">
+    <div class="row">
+        <div class="col-12">
+            <h2>Pais <strong>{{country.name.common}}</strong></h2>
+            <hr>
+
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-4">
+        <h3>Bandera</h3>
+        <img [src]="country?.flags?.svg" [alt]="country?.name?.common" class="img-thumbnail">
+    </div>
+    <div class="col">
+        <h3>Información</h3>
+        <ul class="list-group">
+            <li class="list-group-item">
+                <strong>Poblacíon</strong> {{country?.population| number}}
+            </li>
+
+            <li class="list-group-item">
+                <strong>Codigo</strong> {{country?.cca3}}
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+<div class="row mt-2">
+    <div class="col">
+
+        <h3>Traducciones</h3>
+
+        <div class="d-flex flex-wrap">
+
+            <span class="badge bg-primary m-1">
+           
+            </span>
+
+        </div>
+
+
+
+    </div>
+</div>
