--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -29,6 +29,27 @@
             <li class="list-group-item">
                 <strong>Código:</strong> {{ country.cca3 }}
             </li>
+
+            <li class="list-group-item">
+                <strong>Region</strong> {{country.region}}
+            </li>
+
+
+            <li class="list-group-item">
+                <strong>Capital: </strong> {{country.capital}}
+            </li>
+
+            <li class="list-group-item">
+                <strong>Moneda: </strong> {{country.currencies}}
+            </li>
+
+            <li class="list-group-item">
+                <strong>Capital: </strong> {{country.capital}}
+            </li>
+
+            <li class="list-group-item">
+                <strong>Lenguage: </strong> {{country.languages}}
+            </li>
         </ul>
     </div>
 </div>
@@ -42,10 +63,20 @@
         <div class="d-flex flex-wrap">
 
             <span class="badge bg-primary m-1">{{ country.translations['ara']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['bre']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['ces']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['cym']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['deu']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['est']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['fin']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['ita']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['kor']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['per']?.common }}</span>
 
         </div>
-
-
-
     </div>
 </div>
+
+
+
+
