--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -13,8 +13,6 @@
             <hr>
         </div>
     </div>
-
-
 <div class="row">
     <div class="col-4">
         <h3>Bandera</h3>
@@ -31,7 +29,7 @@
             </li>
 
             <li class="list-group-item">
-                <strong>Region</strong> {{country.region}}
+                <strong>Region</strong> {{country.region}} 
             </li>
 
 
@@ -48,7 +46,7 @@
             </li>
 
             <li class="list-group-item">
-                <strong>Lenguage: </strong> {{country.languages}}
+                <strong>PostalCode: </strong> {{country.timezones}}
             </li>
         </ul>
     </div>
@@ -62,16 +60,16 @@
 
         <div class="d-flex flex-wrap">
 
-            <span class="badge bg-primary m-1">{{ country.translations['ara']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['bre']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['ces']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['cym']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['deu']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['est']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['fin']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['ita']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['kor']?.common }}</span>
-            <span class="badge bg-primary m-1">{{ country.translations['per']?.common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['ara'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['bre'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['ces'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['cym'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['deu'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['est'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['fin'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['ita'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
+            <span class="badge bg-primary m-1">{{ country.translations['per'].common }}</span>
 
         </div>
     </div>
