--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,9 +4,8 @@
 <div class="row">
     <div class="col">
              <!--SearchBox-->
-             <shared-search-box (OnValue)="searchByCapital($event)" 
-             placeholder="Buscar por Capital">
-            </shared-search-box>
+             <!--<shared-search-box (OnValue)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>-->
+             <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>
     </div>
 </div>
 
