Add information betweeen pages 22/09/2023

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,7 +3,10 @@
 <input
   type="text"
   class="form-control"
-  [placeholder]="placeholder" 
-   (keyup)="onKeyPress(txtInput.value)" #txtInput>
+  [placeholder]="placeholder"
+  [value]="initialValue" 
+  (keyup)="onKeyPress(txtInput.value)"
+  #txtInput
+>
 
 
