--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,7 +5,7 @@
     <div class="col">
              <!--SearchBox-->
              <!--<shared-search-box (OnValue)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>-->
-             <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>
+             <shared-search-box (onDebounce)="searchByCapital($event)"  [initialValue]="initialValue"   placeholder="Buscar por Capital"></shared-search-box>
     </div>
 </div>
 
