--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -4,9 +4,7 @@
 <div class="row">
     <div class="col">
              <!--SearchBox-->
-             <shared-search-box (OnValue)="searchByCountry($event)" 
-             placeholder="Buscar por País">
-            </shared-search-box>
+             <shared-search-box (onDebounce)="searchByCountry($event)"  [initialValue]="initialValue"   placeholder="Buscar por Pais"></shared-search-box>
     </div>
 </div>
 
@@ -14,7 +12,7 @@
 <div class="row">
     <div class="col">
         <hr>
-        
+        <shared-loading-spinner *ngIf="isLoading" ></shared-loading-spinner>
         <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
