--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -4,9 +4,9 @@
 <div class="row">
     <div class="col">
              <!--SearchBox-->
-             <shared-search-box (OnValue)="searchByRegion($event)" 
-             placeholder="Buscar por País">
-            </shared-search-box>
+                <button *ngFor="let region of regions" class="btn mx-2" [ngClass]="{'btn-outline-primary': selectedRegion === region}" (click)="searchByRegion(region)" >
+                        {{region}}
+                </button>
     </div>
 </div>
 
@@ -14,6 +14,8 @@
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading" ></shared-loading-spinner>
+
         <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
